--- a/content/blogs/2020/07/updatecli-docker-compose.adoc
+++ b/content/blogs/2020/07/updatecli-docker-compose.adoc
@@ -38,7 +38,7 @@ The second method to identify a docker image version is by using its digest like
 
 The problem here could be resumed by "Do we want to only use well-defined docker image by using digests but with the cost of losing readability?" or "Are we ok to take the risk of running an unwanted version by using image tags?".
 
-It depends on how important we value readability versus uniqueness, but a rule of thumb is to consider the docker image build strategy, what's the risk of running an unwanted version and how big is the chance of having to rollback. If we only build one image by version and that version is regularly updated then preferring readability by using docker image tag seems ok-ish otherwise in any other scenarios It's usually safer to use docker image digest.
+It depends on how important we value readability versus uniqueness, but a rule of thumb is to consider the docker image build strategy, what's the risk of running an unwanted version, and how big is the chance of having to rollback. If we only build one image by version and that version is regularly updated then preferring readability by using docker image tag seems ok-ish otherwise in any other scenarios It's usually safer to use docker image digest.
 
 Now that we know what we need to update and why, let see how we can do it using updatecli.
 
@@ -47,7 +47,7 @@ Now that we know what we need to update and why, let see how we can do it using 
 When we want to automate image tag updates, we have to identify the process used to define those tags, and if that process is automated, then you can more than likely also automate version updates. That's where updatecli can play a role.
 
 In `updatecli`, you specify this process in the source stage, then if needed you apply some condition and finally, if everything goes well then you update the version in your target file.
-So let take this example where we want to regularly update the Jenkins version, we know that a weekly release is published every week on a maven repository, then a docker image is build and published on DockerHub. Considering the build strategy, it seems fine to use docker image tag.
+So let take this example where we want to regularly update the Jenkins version, we know that a weekly release is published every week on a maven repository, then a docker image is built and published on DockerHub. Considering the build strategy, it seems fine to use docker image tag.
 
 Let's consider this docker compose file:
 
@@ -160,7 +160,7 @@ services:
 ```
 
 While the configuration remains quite similar to our previous example, this time we introduce two new elements. Firstly, `strategy.yaml` becomes `strategy.tpl` which is a go template.
-By using go template we can define generic values and reference them from our template or read values from an environment variable like `{{ requiredEnv  GITHUB_TOKEN }}` which is what we want here so we don't put the github token in the file.
+By using go template we can define generic values and reference them from our template or read values from an environment variable like `{{ requiredEnv  GITHUB_TOKEN }}` which is what we want here so we don't put the GitHub token in the file.
 The second major change is the 'scm' block which should be quiet obvious and defines where to push commits.
 
 .strategy.tpl
@@ -201,7 +201,7 @@ In this scenario, we saw how to automatically update docker-compose file using c
 
 Now we can replace our docker-compose file by any other YAML file to automate YAML update.
 
-Feel free to provide any feedbacks you may have by opening Github issue on the project link:https://github.com/olblak/updatecli/issues[here]
+Feel free to provide any feedback you may have by opening Github issue on the project link:https://github.com/olblak/updatecli/issues[here]
 
 == Links
 * link:https://github.com/olblak/updatecli[olblak/updatecli] for a link to the project
