--- a/content/blogs/2020/11/sustainability_sponsorship_oss_projects.adoc
+++ b/content/blogs/2020/11/sustainability_sponsorship_oss_projects.adoc
@@ -1,10 +1,9 @@
 ---
 title: Sustainability sponsorship of OSS projects
 type: posts
-layout: mylayout
-date : 2020-11-04
+date : 2020-11-16
 draft : false
-tags : ["Sponsoring", "sustainability", "Governance","OSS"]
+tags : ["Sponsorship", "sustainability", "Governance","OSS"]
 categories : ["OSS"]
 ---
 
@@ -64,12 +63,11 @@ In the first approach, the sponsor doesn't bother about money, they give you ful
 That's the easiest scenario but also a dangerous one. You create unknown vendor lock-in with the sponsor. It can be hard to evaluate the cost and you end up using services that you would have not used otherwise because it's expensive but in your case it's free so why not using.
 Then one day, the sponsor priorities change, and instead, they send a bill. It's not pleasant and forces you to re-evaluate the project prioritizes.
 
-In the second approach, the sponsor gives you an unlimited or a very high monthly budget that you can use through their services offering. That's the one I prefer as I know how and why I am using a dedicated service. It's also valuable information when you do a budget risk assessment. If the sponsoring budget is not high enough, you may struggle during months with a lot of activities like October or March. Sometimes sponsors give yearly budget which is also useful.
+In the second approach, the sponsor gives you a budget that you can use through their services offering. That's the one I prefer as I know how and why I am using a dedicated service. It's also valuable information when you do a budget risk assessment. If the sponsoring budget is not high enough, you may struggle during months with a lot of activities like October or March which can be mitigated with a yearly budget.
 
 More globally, it's important to regularly think about a backup solution, what would happen if sponsoring end abruptly? 
 
-! Don't forget those free services that everybody uses because it's free. What if the company behind, changes his free plan?
-They are many examples of this.
+! Don't forget those free services that everybody uses because it's free. Nothing last forever and they are many examples of this.
 
 One condition that I almost immediately decline is "exclusivity". Some sponsors ask it but an OSS project has huge inertia, with limited access to money. So it usually takes time to switch between different solutions.
 
@@ -79,7 +77,7 @@ One condition that I almost immediately decline is "exclusivity". Some sponsors 
 I found this topic the most challenging and the most unpredictable one.
 
 Every sponsorship plan has different rules here. It goes from: "No engagement, the contract can end at any moment" to "We'll re-evaluate the contract in three years". While I understand that companies don't want to engage in providing free access to unlimited resources for an unlimited amount of time. On the other side, it can take a significant amount of time to migrate between different solutions.
-And it's frustrating to have to replace something that works great just because the sponsor has budget constraint aka "is not interested anymore".They are way more interesting challenges to solve than migrating something that works well.
+And it's frustrating to have to replace or remove something that works great just because the sponsor has "budget constraint". They are way more interesting challenges to solve than migrating something that works well.
 
 For each sponsorship plan, I evaluate 
 
