Update contact info
Signed-off-by: Olivier Vernin <olivier@vernin.me>

--- a/content/contact.adoc
+++ b/content/contact.adoc
@@ -1,1 +1,4 @@
-Feel free to drop me an mailto:contact@olblak.com[email] and I'll try to respond you in a timely manner.
+I am reachable through many different channels, so feel free to drop me a message and I'll try to respond you in a timely manner.
+
+My preferred ways to be contacted are either chatting on Matrix, my handle is @olblak:matrix.org, or by email using mailto:contact@olblak.com[contact@olblak.com]
+
